--- a/scripts/scripts.cabal
+++ b/scripts/scripts.cabal
@@ -1,5 +1,5 @@
 cabal-version:      3.0
-name:               project
+name:               scripts
 version:            0.1.0.0
 -- synopsis:
 -- description:
@@ -9,13 +9,13 @@ author:             Nathaniel May
 maintainer:         github@nathanielmay.com
 -- copyright:
 build-type:         Simple
-extra-doc-files:    CHANGELOG.md
+-- extra-doc-files:
 -- extra-source-files:
 
 common warnings
     ghc-options: -Wall
 
-executable scripts
+executable project
     import:           warnings
     main-is:          Main.hs
     -- other-modules:    
