--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "tailwindcss": "^3.4.1"
   },
   "scripts": {
-    "spago-bundle-app": "spago bundle-app --to dist/index.js"
+    "spago-bundle-app": "spago bundle-app --to dist/index.js",
+    "spago-bundle-app-release": "spago bundle-app --to dist/index.js --source-maps --minify"
   },
   "dependencies": {
     "http-server": "^14.1.1"
