--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "esbuild": "^0.20.1",
+    "purs-tidy": "^0.11.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1"
   },
